# home-server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  devbox.json  gui_server.yml  makefile  pyproject.toml  renovate.json  vagrant-alma.pkr.hcl
.github/workflows/: main.yml  reusable-playbook-workflow.yaml
playbooks/: Vagrantfile  ansible.cfg  configure_server.yml  inventory.ini  requirements.yml
requirements/: requirements.txt
scripts/make/: run_deployment.sh  run_staging.sh
scripts/utils/: hevc-converter.sh  list-video-codec.sh
terraform/cloudflare/: admin.tf  cloudflare_main.tf  cloudflare_records.tf  cloudflare_tunnels.tf  comics.tf  depas.tf  grafana.tf  home.tf  jelly.tf  main.tf  music.tf  notes.tf  ntfy.tf  page_rules.tf  records.tf  ssh.tf  terraform.tf  tunnel.tf  variables.tf
terraform/grafana/: alerts.tf  contact_points.tf  dashboards.tf  data_sources.tf  folders.tf  main.tf  service_accounts.tf  terraform.tf  variables.tf
terraform/grafana/alerts_files/: cloudflare_tunnels_status_A.json  disk_read_latency_A.json  docker_service_status_B.json  high_cpu_usage_A.json  high_media_disk_usage.json  high_memory_usage_A.json  high_root_disk_usage.json  jellyfin_status_A.json  jump_status_A.json  kavita_status_A.json  lychee_status_A.json  navidrome_status_A.json  network_alerts_B.json  network_alerts_C.json  network_status_A.json  pingvin_status_A.json  system_alerts_B.json  system_alerts_cpu_B.json  system_alerts_media_disk_usage_B.json
terraform/grafana/dashboards_files/: grafana-docker-dashboard.json  (+1 more)
vagrant/ubuntu-dev/: Vagrantfile
(+166 files in other folders)
