[project]
name = "home-server"
version = "0.1.0"
description = "Home Server setup with tools like jellyfin, kavita, navidrome, etc."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible==12.0.0",
    "molecule==25.7.0",
    "molecule-plugins[vagrant]==25.8.12",
    "python-vagrant==1.0.0",
]
