[project]
name = "home-server"
version = "0.1.0"
description = "Home Server setup with tools like jellyfin, kavita, navidrome, etc."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible==12.2.0",
    "molecule==25.9.0",
    "molecule-plugins[vagrant]==25.8.12",
    "python-vagrant==1.0.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
    "pre-commit>=4.3.0",
]
